fixed the overflow-x issue, and remade the badge for the shopping cart

--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -15,9 +15,10 @@
 
 .cart{
     cursor: pointer;
+    margin-right: 10px;
 }
 
-.cart span:nth-child(2){
+.badge{
     padding: 0 3px;
     background-color: #5C3996;
     color: white;
@@ -25,6 +26,7 @@
     font-weight: bold;
     border-radius: 5px;
     position: relative;
-    top: -50px;
-    left: -15px;
+    top: -70px;
+    right: -50px;
+    width: 0.7rem;
 }
